# Bottlecap_detection

./: Dockerfile  LICENSE  README.md  ci.yml  pyproject.toml  requirements.txt  settings.yaml
notebook/: model_development_and_experimentation (1).ipynb  model_development_and_experimentation.ipynb
src/bsort/: cli.py  infer.py  train.py  utils.py
tests/: test_utils.py
tools/: relabel_and_augment.py
