[project]
name = "bsort"
version = "0.1.0"
description = "Bottle cap detection and color classification pipeline (YOLO + CLI + ML pipeline)"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["yolo", "computer-vision", "ml", "bottle-cap", "classification", "detection"]

[project.scripts]
bsort = "bsort.cli:app"

[project.dependencies]
ultralytics = "^8.2.0"
opencv-python = "^4.9.0"
numpy = "^1.26.0"
PyYAML = "^6.0.1"
rich = "^13.0.0"
tqdm = "^4.65.0"
Pillow = "^10.0.0"
gdown = "*"
albumentations = "*"
scikit-learn = "*"
matplotlib = "*"
wandb = "*"

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pylint",
    "pytest",
    "pytest-cov"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py39', 'py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.pylint.messages_control]
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116"   # missing-function-docstring
]
